--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tokio = { version = "1.48.0", features = ["full"] }
 zip = "7.0.0"
 dirs = "6.0.0"
 tauri-plugin-dialog = "2.4.2"
