--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-opener": "^2",
     "pinia": "^3.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
     "sass-embedded": "^1.97.1",
