--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri"
@@ -21,6 +22,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "sass-embedded": "^1.97.1",
     "typescript": "~5.6.2",
+    "vitest": "^0.34.0",
     "vite": "^6.0.3",
     "vue-tsc": "^2.1.10"
   }
