Moving from flat files to a Sqlite database. Can unzip and store the racecard into Racecards/railbreak.db.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,4 +26,9 @@ tokio = { version = "1.48.0", features = ["full"] }
 zip = "7.0.0"
 dirs = "6.0.0"
 tauri-plugin-dialog = "2.4.2"
+sqlx = { version="0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "uuid", "chrono"] }
+uuid = { version="1.19.0", features = ["v4", "serde"] }
+anyhow = "1.0.100"
+thiserror = "2.0.18"
+
 
