--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,5 +30,5 @@ sqlx = { version="0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros"
 uuid = { version="1.19.0", features = ["v4", "serde"] }
 anyhow = "1.0.100"
 thiserror = "2.0.18"
-
+phf = { version = "0.11", features = ["macros"] }
 
